Code Files/force-app/main/default/objects/Feedback__c/fields/Client__c.field-meta.xml
<CustomField><fullName>Client__c</fullName><label>Client</label><type>Lookup</type><deleteConstraint>SetNull</deleteConstraint><referenceTo>Client__c</referenceTo><relationshipLabel>Feedbacks</relationshipLabel><relationshipName>Feedbacks</relationshipName></CustomField>