Code Files/force-app/main/default/objects/Feedback__c/fields/Comments__c.field-meta.xml
<CustomField><fullName>Comments__c</fullName><label>Comments</label><type>LongTextArea</type><length>32768</length><visibleLines>5</visibleLines></CustomField>