Code Files/force-app/main/default/objects/Feedback__c/fields/Event__c.field-meta.xml
<CustomField><fullName>Event__c</fullName><label>Event</label><type>Lookup</type><deleteConstraint>SetNull</deleteConstraint><referenceTo>Event__c</referenceTo><relationshipLabel>Feedbacks</relationshipLabel><relationshipName>Feedbacks</relationshipName></CustomField>